k8s-training/hands-on2-solution/06_guestbook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: guestbook
    tier: frontend
spec:
  # Wir verwenden Ingress um externen Traffic auf den Service zu leiten, und lassen deshalb "type:..." weg.
  #type: NodePort 
  ports:
  - port: 80
  selector:
    app: guestbook
    tier: frontend
